// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/roles/_id/edit.vue should be rendered correctly 1`] = `
<div
  breadcrumbs="[object Object],[object Object],[object Object]"
  class="z-page-stub"
  compact="compact"
>
  <div
    class="z-page-stub-slot-tabs"
  />
  <div
    class="z-page-stub-slot-title"
  />
  <form
    class="v-form root"
    data-form=""
    data-z-role-form=""
    novalidate="novalidate"
  >
    <div>
      <div
        class="z-form-card-stub"
        title="基本情報"
      >
        <div
          class="z-form-card-stub-slot-actions"
        />
        <z-form-card-item-set-stub
          icon="M10 4A4 4 0 0 0 6 8A4 4 0 0 0 10 12A4 4 0 0 0 14 8A4 4 0 0 0 10 4M10 6A2 2 0 0 1 12 8A2 2 0 0 1 10 10A2 2 0 0 1 8 8A2 2 0 0 1 10 6M17 12C16.84 12 16.76 12.08 16.76 12.24L16.5 13.5C16.28 13.68 15.96 13.84 15.72 14L14.44 13.5C14.36 13.5 14.2 13.5 14.12 13.6L13.16 15.36C13.08 15.44 13.08 15.6 13.24 15.68L14.28 16.5V17.5L13.24 18.32C13.16 18.4 13.08 18.56 13.16 18.64L14.12 20.4C14.2 20.5 14.36 20.5 14.44 20.5L15.72 20C15.96 20.16 16.28 20.32 16.5 20.5L16.76 21.76C16.76 21.92 16.84 22 17 22H19C19.08 22 19.24 21.92 19.24 21.76L19.4 20.5C19.72 20.32 20.04 20.16 20.28 20L21.5 20.5C21.64 20.5 21.8 20.5 21.8 20.4L22.84 18.64C22.92 18.56 22.84 18.4 22.76 18.32L21.72 17.5V16.5L22.76 15.68C22.84 15.6 22.92 15.44 22.84 15.36L21.8 13.6C21.8 13.5 21.64 13.5 21.5 13.5L20.28 14C20.04 13.84 19.72 13.68 19.4 13.5L19.24 12.24C19.24 12.08 19.08 12 19 12H17M10 13C7.33 13 2 14.33 2 17V20H11.67C11.39 19.41 11.19 18.77 11.09 18.1H3.9V17C3.9 16.36 7.03 14.9 10 14.9C10.43 14.9 10.87 14.94 11.3 15C11.5 14.36 11.77 13.76 12.12 13.21C11.34 13.08 10.6 13 10 13M18.04 15.5C18.84 15.5 19.5 16.16 19.5 17.04C19.5 17.84 18.84 18.5 18.04 18.5C17.16 18.5 16.5 17.84 16.5 17.04C16.5 16.16 17.16 15.5 18.04 15.5Z"
          label=""
        >
          <div
            class="root"
            data-name=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-text-field__slot"
                  >
                    <label
                      class="v-label v-label--active theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      ロール名 *
                    </label>
                    <input
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <z-form-card-item-set-stub
          icon="M22.08,11.04H20.08V4H13.05V2H11.04V4H4V11.04H2V13.05H4V20.08H11.04V22.08H13.05V20.08H20.08V13.05H22.08V11.04M18.07,18.07H13.05V16.06H11.04V18.07H6V13.05H8.03V11.04H6V6H11.04V8.03H13.05V6H18.07V11.04H16.06V13.05H18.07V18.07M13.05,12.05A1,1 0 0,1 12.05,13.05C11.5,13.05 11.04,12.6 11.04,12.05C11.04,11.5 11.5,11.04 12.05,11.04C12.6,11.04 13.05,11.5 13.05,12.05Z"
          label=""
        >
          <div
            class="root"
            data-scope=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
            >
              <div
                class="v-input__control"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="v-input__slot"
                  role="button"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-select__slot"
                  >
                    <label
                      class="v-label v-label--active theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      権限範囲 *
                    </label>
                    <div
                      class="v-select__selections"
                    >
                      <div
                        class="v-select__selection v-select__selection--comma"
                      >
                        事業所
                      </div>
                      <input
                        aria-readonly="false"
                        autocomplete="off"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate mdi mdi-menu-down theme--light"
                        />
                      </div>
                    </div>
                    <input
                      type="hidden"
                      value="3"
                    />
                  </div>
                  <div
                    class="v-menu"
                  >
                    <!---->
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <z-form-card-item-set-stub
          icon="M21,11C21,16.55 17.16,21.74 12,23C6.84,21.74 3,16.55 3,11V5L12,1L21,5V11M12,21C15.75,20 19,15.54 19,11.22V6.3L12,3.18L5,6.3V11.22C5,15.54 8.25,20 12,21M12,6A3,3 0 0,1 15,9C15,10.31 14.17,11.42 13,11.83V14H15V16H13V18H11V11.83C9.83,11.42 9,10.31 9,9A3,3 0 0,1 12,6M12,8A1,1 0 0,0 11,9A1,1 0 0,0 12,10A1,1 0 0,0 13,9A1,1 0 0,0 12,8Z"
          label=""
        >
          <div
            class="root"
            data-is-system-admin=""
            data-z-form-card-item=""
          >
            <div
              class="v-input theme--light v-input--selection-controls v-input--checkbox"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-input--selection-controls__input"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                    />
                    <input
                      aria-checked="false"
                      role="checkbox"
                      type="checkbox"
                      value=""
                    />
                    <div
                      class="v-input--selection-controls__ripple"
                    />
                  </div>
                  <label
                    class="v-label theme--light"
                    style="left: 0px; position: relative;"
                  >
                    システム管理権限
                  </label>
                </div>
                <div
                  class="v-messages theme--light"
                >
                  <transition-group-stub
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <transition-stub
          name="expand-transition"
        >
          <div
            class="pt-4"
          >
            <v-divider-stub />
            <v-subheader-stub>
              詳細権限
            </v-subheader-stub>
            <v-list-stub
              dense="true"
              tag="div"
            >
              <div
                class="v-list-group-stub"
              >
                <div
                  class="v-list-group-stub-slot-activator"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--checkbox primary--text"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-marked theme--light primary--text"
                            />
                            <input
                              aria-checked="true"
                              data-permission-group-checkbox="1"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple primary--text"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light primary--text"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      権限：事業所
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </div>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--checkbox primary--text"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-marked theme--light primary--text"
                            />
                            <input
                              aria-checked="true"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple primary--text"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light primary--text"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      一覧参照（自社）
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--checkbox primary--text"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-marked theme--light primary--text"
                            />
                            <input
                              aria-checked="true"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple primary--text"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light primary--text"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      詳細参照（自社）
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--checkbox primary--text"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-marked theme--light primary--text"
                            />
                            <input
                              aria-checked="true"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple primary--text"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light primary--text"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      登録（自社）
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--checkbox primary--text"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-marked theme--light primary--text"
                            />
                            <input
                              aria-checked="true"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple primary--text"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light primary--text"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      編集（自社）
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--checkbox primary--text"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-marked theme--light primary--text"
                            />
                            <input
                              aria-checked="true"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple primary--text"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light primary--text"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      削除（自社）
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
              </div>
              <div
                class="v-list-group-stub"
              >
                <div
                  class="v-list-group-stub-slot-activator"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              data-permission-group-checkbox="2"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      権限：事業所グループ
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </div>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      一覧参照
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      登録
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      編集
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      削除
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
              </div>
              <div
                class="v-list-group-stub"
              >
                <div
                  class="v-list-group-stub-slot-activator"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              data-permission-group-checkbox="3"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      権限：ロール
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </div>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      一覧参照
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      詳細参照
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      登録
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      編集
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      削除
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
              </div>
              <div
                class="v-list-group-stub"
              >
                <div
                  class="v-list-group-stub-slot-activator"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              data-permission-group-checkbox="4"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      権限：スタッフ
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </div>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      一覧参照
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      詳細参照
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      登録
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      編集
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      削除
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
              </div>
              <div
                class="v-list-group-stub"
              >
                <div
                  class="v-list-group-stub-slot-activator"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              data-permission-group-checkbox="5"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      権限：利用者
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </div>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      一覧参照
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      詳細参照
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      登録
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      編集
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
                <v-list-item-stub
                  activeclass=""
                  tag="div"
                >
                  <v-list-item-action-stub>
                    <div
                      class="v-input theme--light v-input--selection-controls v-input--checkbox"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                        </div>
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </v-list-item-action-stub>
                  <v-list-item-content-stub
                    tag="div"
                  >
                    <v-list-item-title-stub
                      tag="div"
                    >
                      削除
                    </v-list-item-title-stub>
                  </v-list-item-content-stub>
                </v-list-item-stub>
              </div>
            </v-list-stub>
          </div>
        </transition-stub>
        <div
          class="z-form-card-stub-slot-header"
        />
      </div>
      <z-form-action-button-stub
        icon="M14,13V17H10V13H7L12,8L17,13M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
        text="保存"
      />
    </div>
  </form>
</div>
`;

exports[`pages/roles/_id/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "isSystemAdmin") 1`] = `
<div
  class="root"
  data-is-system-admin=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state theme--light v-input--selection-controls v-input--checkbox error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-input--selection-controls__input"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light error--text"
          />
          <input
            aria-checked="false"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <div
            class="v-input--selection-controls__ripple error--text"
          />
        </div>
        <label
          class="v-label theme--light error--text"
          style="left: 0px; position: relative;"
        >
          システム管理権限
        </label>
      </div>
      <div
        class="v-messages theme--light error--text"
        role="alert"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        >
          <div
            class="v-messages__message"
          >
            システム管理権限を入力してください。
          </div>
        </transition-group-stub>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/roles/_id/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "name") 1`] = `
<div
  class="root"
  data-name=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: -24px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label v-label--active theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            ロール名 *
          </label>
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              ロール名を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/roles/_id/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "scope") 1`] = `
<div
  class="root"
  data-scope=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="v-input__slot"
        role="button"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: -24px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-select__slot"
        >
          <label
            class="v-label v-label--active theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            権限範囲 *
          </label>
          <div
            class="v-select__selections"
          >
            <div
              class="v-select__selection v-select__selection--comma"
            >
              事業所
            </div>
            <input
              aria-readonly="false"
              autocomplete="off"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-menu-down theme--light error--text"
              />
            </div>
          </div>
          <input
            type="hidden"
            value="3"
          />
        </div>
        <div
          class="v-menu"
        >
          <!---->
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              権限範囲を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;
